kubernetes/homelab-k8s-001/apps/dataflow/spring-cloud-dataflow/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spring-cloud-dataflow-server
spec:
  hostnames: ["spring-cloud-dataflow-server.dmfrey.com"]
  parentRefs:
    - name: internal-envoy
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: spring-cloud-dataflow-server
          namespace: dataflow
          port: 8080
